--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -8048,7 +8048,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Xã Giao",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8067,7 +8067,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bạn Bè",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8086,7 +8086,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Kẻ Thù",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8105,7 +8105,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chặn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8124,7 +8124,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Hoạt Động",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8143,7 +8143,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Riêng",
         "ar":"",
         "it":"",
         "pl":"",
