--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -505,7 +505,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thêm Bạn Bè",
         "ar":"",
         "it":"",
         "pl":"",
@@ -524,7 +524,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Xóa Bạn Bè",
         "ar":"",
         "it":"",
         "pl":"",
@@ -543,7 +543,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thêm Kẻ Thù",
         "ar":"",
         "it":"",
         "pl":"",
@@ -562,7 +562,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Xóa Kẻ Thù",
         "ar":"",
         "it":"",
         "pl":"",
@@ -581,7 +581,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Chặn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -600,7 +600,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bỏ Chặn",
         "ar":"",
         "it":"",
         "pl":"",
