--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1499,5 +1499,24 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.label.open":{
+        "en":"Open",
+        "fr":"Ouvrir",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
