--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -8149,5 +8149,24 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.abyss.title":{
+        "en":"Abyss",
+        "fr":"Abysse",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
