--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5699,6 +5699,44 @@
         "th":"",
         "id":""
     },
+    "UI.windows.challenges.ABYSS.name":{
+        "en":"Abyss Paradox",
+        "fr":"Paradoxe des Abysses",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.challenges.ABYSS.description":{
+        "en":"Throw yourself into a rift opened by a mysterious force from the depths of the Fiery Tower and challenge creatures from worlds never before explored by the inhabitants of Cain",
+        "fr":"Jetez-vous dans une faille ouverte par une force mystérieuse provenant des tréfond de la Tour de Feu et défiez des créatures provenant de mondes jamais explorés par les habitants de Kane",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.ranking.title":{
         "en":"Ranking",
         "fr":"Classement",
