--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -8206,5 +8206,81 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "UI.windows.abyss.description":{
+        "en":"You can choose an already completed abyss floor before you enter.<br>Highest floor you can reach: {0}",
+        "fr":"Vous pouvez choisir un étage déjà terminé avant d'entrer.<br>Plus haut étage que vous pouvez atteindre: {0}",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.abyss.tab.nightmare":{
+        "en":"Nightmarish",
+        "fr":"Cauchemardesque",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.abyss.tab.horrible":{
+        "en":"Horrible",
+        "fr":"Horrible",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.abyss.tab.despair":{
+        "en":"Despair",
+        "fr":"Désespoir",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
