--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -8302,6 +8302,25 @@
         "th":"",
         "id":""
     },
+    "UI.windows.abyss.label.chooseFloor":{
+        "en":"Choose Floor",
+        "fr":"Choisir l'Etage",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.title.ABYSS_FLOOR_5.name":{
         "en":"Abyss Seer",
         "fr":"Voyant des Abysses",
