--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -8321,6 +8321,82 @@
         "th":"",
         "id":""
     },
+    "UI.windows.abyss.table.col.floorRequired":{
+        "en":"Floor",
+        "fr":"Etage",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.abyss.table.col.state":{
+        "en":"State",
+        "fr":"Etat",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.abyss.table.state.y":{
+        "en":"Aquired",
+        "fr":"Obtenus",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.abyss.table.state.n":{
+        "en":"Undone",
+        "fr":"Manquant",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.title.ABYSS_FLOOR_5.name":{
         "en":"Abyss Seer",
         "fr":"Voyant des Abysses",
