--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -8284,8 +8284,8 @@
         "id":""
     },
     "UI.windows.abyss.tab.despair":{
-        "en":"Despairing",
-        "fr":"Désespérante",
+        "en":"Desperation",
+        "fr":"Désespoir",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
