--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10036,6 +10036,44 @@
         "th":"",
         "id":""
     },
+    "item.5052.name":{
+        "en":"Golden Pegasus",
+        "fr":"Pégase Dorée",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5053.name":{
+        "en":"Pandora",
+        "fr":"Pandore",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name":{
         "en":"Initlal Hairstyle (Green)",
         "fr":"Coiffure Initiale (Vert)",
