--- a/Translation/item.json
+++ b/Translation/item.json
@@ -10038,7 +10038,7 @@
     },
     "item.5052.name":{
         "en":"Golden Pegasus",
-        "fr":"Pégase Dorée",
+        "fr":"Pégase Doré",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
