--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1518,5 +1518,43 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "general.label.delete":{
+        "en":"Delete",
+        "fr":"Supprimer",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "general.label.start":{
+        "en":"Start",
+        "fr":"Commencer",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
     }
 }
