--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -2,13 +2,13 @@
     "instance.reward.normal":{
         "en": "Normal Reward",
         "fr": "Récompense normale",
-        "es": "",
+        "es": "Recompensa normal",
         "zh-cn": "通常奖励",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Normale Belohnung",
         "jp": "",
         "pt": "",
         "vi": "Phần Thưởng Thường",
@@ -20,14 +20,14 @@
     },
     "instance.reward.special":{
         "en": "Special Reward",
-        "fr": "Récompense spéciale",
-        "es": "",
+        "fr": "Récompense Spéciale",
+        "es": "Recompensa Especial",
         "zh-cn": "特殊奖励",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Spezielle Belohnung",
         "jp": "",
         "pt": "",
         "vi": "Phần Thưởng Đặc Biệt",
@@ -40,13 +40,13 @@
     "instance.reward.daily_left":{
         "en": "End Reward Left: {0}/3",
         "fr": "Récomp. de Fin Restante: {0}/3",
-        "es": "",
+        "es": "Recompensa final que queda: {0}/3",
         "zh-cn": "剩余进入次数: {0}/3",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Verbleibende Abschlussbelohnung: {0}/3",
         "jp": "",
         "pt": "",
         "vi": "Phần Thưởng Kết Thúc Còn: {0}/3",
@@ -59,13 +59,13 @@
     "instance.text.my-group":{
         "en": "My Group",
         "fr": "Mon Groupe",
-        "es": "",
+        "es": "Mi grupo",
         "zh-cn": "我的队伍",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Meine Gruppe",
         "jp": "",
         "pt": "",
         "vi": "Tổ Đội Của Tôi",
@@ -78,13 +78,13 @@
     "instance.text.invite-to-group":{
         "en": "Invite in the Group",
         "fr": "Inviter dans le Groupe",
-        "es": "",
+        "es": "Invitar al Grupo",
         "zh-cn": "邀请组队",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "In die Gruppe einladen",
         "jp": "",
         "pt": "",
         "vi": "Mời vào Tổ Đội",
@@ -97,13 +97,13 @@
     "instance.btn.enter":{
         "en": "Enter",
         "fr": "Entrer",
-        "es": "",
+        "es": "Entrar",
         "zh-cn": "进入",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Eintreten",
         "jp": "",
         "pt": "",
         "vi": "Tiến Vào",
@@ -116,13 +116,13 @@
     "instance.btn.buy-reward":{
         "en": "Buy 1",
         "fr": "Acheter 1",
-        "es": "",
+        "es": "Comprar 1",
         "zh-cn": "购买1次",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "1 Kaufen",
         "jp": "",
         "pt": "",
         "vi": "Mua 1",
@@ -134,14 +134,14 @@
     },
     "instance.btn.refresh":{
         "en": "Refresh",
-        "fr": "Rafraichir",
-        "es": "",
+        "fr": "Rafraîchir",
+        "es": "Actualizar",
         "zh-cn": "重置",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Aktualisieren",
         "jp": "",
         "pt": "",
         "vi": "Làm Mới",
@@ -153,14 +153,14 @@
     },
     "instance.btn.back_to_hall":{
         "en": "Back to Hall",
-        "fr": "Retour à la liste",
-        "es": "",
+        "fr": "Retour au hall",
+        "es": "De vuelta al vestíbulo",
         "zh-cn": "返回大厅",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Zurück zur Lobby",
         "jp": "",
         "pt": "",
         "vi": "Quay lại Sảnh",
@@ -173,13 +173,13 @@
     "instance.INSTANCE_20.name":{
         "en": "Deathly Mineshaft",
         "fr": "Mine Mortelles",
-        "es": "",
+        "es": "Pozo Mortal",
         "zh-cn": "死亡矿井",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Tödlicher Minenschacht",
         "jp": "",
         "pt": "",
         "vi": "Khu Mỏ Tử Thần",
@@ -192,13 +192,13 @@
     "instance.INSTANCE_20.description.reward.normal":{
         "en": "Lv20 common materials, Costume sets and Runestones.",
         "fr": "Materiel commun Nv20, Costumes et Pierres runiques",
-        "es": "",
+        "es": "Materiales usuales Nv20, Conjuntos de vestuario y Piedras rúnicas",
         "zh-cn": "20级普通材料、套装符文石.",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Gewöhnliches Material Lv20, Kostüme und Runensteine",
         "jp": "",
         "pt": "",
         "vi": "Nguyên liệu thường Cấp 20, Bộ Trang Phục và Đá Cổ Ngữ.",
@@ -211,13 +211,13 @@
     "instance.INSTANCE_20.description.reward.special":{
         "en": "Glory Gem",
         "fr": "Gemme de Gloire",
-        "es": "",
+        "es": "Gema de Gloria",
         "zh-cn": "荣誉宝石",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Rumstein",
         "jp": "",
         "pt": "",
         "vi": "Đá Vinh Quang",
@@ -230,13 +230,13 @@
     "instance.INSTANCE_30.name":{
         "en": "Pirate Camp",
         "fr": "Camp de pirates",
-        "es": "",
+        "es": "Campamento de Piratas",
         "zh-cn": "海盗巢穴",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Piratenlager",
         "jp": "",
         "pt": "",
         "vi": "Trại Hải Tặc",
@@ -249,13 +249,13 @@
     "instance.INSTANCE_30.description.reward.normal":{
         "en": "Lv30 common materials, Costume sets and Runestones.",
         "fr": "Materiel commun Nv30, Costumes et Pierres runiques",
-        "es": "",
+        "es": "Materiales usuales Nv30, Conjuntos de vestuario y Piedras rúnicas",
         "zh-cn": "30级普通材料、套装符文石.",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Gewöhnliches Material Lv30, Kostüme und Runensteine",
         "jp": "",
         "pt": "",
         "vi": "Nguyên liệu thường Cấp 30, Bộ Trang Phục và Đá Cổ Ngữ.",
@@ -268,13 +268,13 @@
     "instance.INSTANCE_30.description.reward.special":{
         "en": "Glory Gem",
         "fr": "Gemme de Gloire",
-        "es": "",
+        "es": "Gema de Gloria",
         "zh-cn": "荣誉宝石",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Rumstein",
         "jp": "",
         "pt": "",
         "vi": "Đá Vinh Quang",
@@ -286,14 +286,14 @@
     },
     "instance.INSTANCE_40.name":{
         "en": "Mysterious Crypt",
-        "fr": "Crypte Mystèrieuse",
-        "es": "",
+        "fr": "Crypte Mystérieuse",
+        "es": "Cripta Misteriosa",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Mysteriöse Krypta",
         "jp": "",
         "pt": "",
         "vi": "Mộ Thờ Bí Ẩn",
@@ -306,13 +306,13 @@
     "instance.INSTANCE_40.description.reward.normal":{
         "en": "Lv40 common materials, Costume sets and Runestones.",
         "fr": "Materiel commun Nv40, Costumes et Pierres runiques",
-        "es": "",
+        "es": "Materiales usuales Nv40, Conjuntos de vestuario y Piedras rúnicas",
         "zh-cn": "40级普通材料、套装符文石.",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Gewöhnliches Material Lv40, Kostüme und Runensteine",
         "jp": "",
         "pt": "",
         "vi": "Nguyên liệu thường Cấp 40, Bộ Trang Phục và Đá Cổ Ngữ.",
@@ -325,13 +325,13 @@
     "instance.INSTANCE_40.description.reward.special":{
         "en": "Glory Gem",
         "fr": "Gemme de Gloire",
-        "es": "",
+        "es": "Gema de Gloria",
         "zh-cn": "荣誉宝石",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Rumstein",
         "jp": "",
         "pt": "",
         "vi": "Đá Vinh Quang",
@@ -344,13 +344,13 @@
     "instance.INSTANCE_45.name":{
         "en": "Fallen Airship",
         "fr": "Dirigeable Tombé",
-        "es": "",
+        "es": "Dirigible Caído",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Gefallenes Luftschiff",
         "jp": "",
         "pt": "",
         "vi": "Phi Thuyền Đắm",
@@ -362,14 +362,14 @@
     },
     "instance.INSTANCE_45.description.reward.normal":{
         "en": "Lv40 common materials, Costume sets and Runestones.",
-        "fr": "Materiel commun Nv40, Costumes et Pierres runiques",
-        "es": "",
+        "fr": "Materiel commun Nv40, Costumes et Pierres runiques.",
+        "es": "Materiales usuales Nv40, Conjuntos de vestuario y Piedras rúnicas.",
         "zh-cn": "40级普通材料、套装符文石.",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Gewöhnliches Material Lv40, Kostüme und Runensteine.",
         "jp": "",
         "pt": "",
         "vi": "Nguyên liệu thường Cấp 40, Bộ Trang Phục và Đá Cổ Ngữ.",
@@ -382,13 +382,13 @@
     "instance.INSTANCE_45.description.reward.special":{
         "en": "Glory Gem",
         "fr": "Gemme de Gloire",
-        "es": "",
+        "es": "Gema de Gloria",
         "zh-cn": "荣誉宝石",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Rumstein",
         "jp": "",
         "pt": "",
         "vi": "Đá Vinh Quang",
@@ -401,13 +401,13 @@
     "instance.INSTANCE_50.name":{
         "en": "Ravaxi",
         "fr": "Ravaxi",
-        "es": "",
+        "es": "Ravaxí",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Ravaxi",
         "jp": "",
         "pt": "",
         "vi": "Ravaxi",
@@ -420,13 +420,13 @@
     "instance.INSTANCE_55.name":{
         "en": "Thorny Heights",
         "fr": "Hauteurs Épineuses",
-        "es": "",
+        "es": "Alturas Espinosas",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Dornige Höhen",
         "jp": "",
         "pt": "",
         "vi": "Độ Cao Gai Góc",
@@ -439,13 +439,13 @@
     "instance.INSTANCE_60.name":{
         "en": "Deep Blue City",
         "fr": "Ville Bleu Profond",
-        "es": "",
+        "es": "Ciudad Azul Profundo",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Tiefblaue Stadt",
         "jp": "",
         "pt": "",
         "vi": "Thành Phố Xanh Sâu Thẳm",
@@ -458,13 +458,13 @@
     "instance.INSTANCE_65.name":{
         "en": "Letin Harbor",
         "fr": "Port de Letin",
-        "es": "",
+        "es": "Puerto de Letin",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Hafen von Letin",
         "jp": "",
         "pt": "",
         "vi": "Cảng Letin",
@@ -477,13 +477,13 @@
     "instance.INSTANCE_70.name":{
         "en": "Nordic Lands",
         "fr": "Terres Nordiques",
-        "es": "",
+        "es": "Tierras Nórdicas",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Nördliche Länder",
         "jp": "",
         "pt": "",
         "vi": "Vùng Đất Bắc Âu",
@@ -496,13 +496,13 @@
     "instance.INSTANCE_80.name":{
         "en": "...",
         "fr": "...",
-        "es": "",
+        "es": "...",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "...",
         "jp": "",
         "pt": "",
         "vi": "",
@@ -515,13 +515,13 @@
     "instance.INSTANCE_90.name":{
         "en": "Rat Crisis",
         "fr": "Crise des Rats",
-        "es": "",
+        "es": "Crisis de Ratas",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Rattenkrise",
         "jp": "",
         "pt": "",
         "vi": "Thảm Họa Chuột Nhắt",
@@ -534,13 +534,13 @@
     "instance.INSTANCE_95A.name":{
         "en": "Opera House Conspiracy",
         "fr": "Complot de l'Opéra",
-        "es": "",
+        "es": "Conspiración de la Ópera",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Verschwörung des Opernhauses",
         "jp": "",
         "pt": "",
         "vi": "Mưu Đồ Nhà Hát Opera",
@@ -553,13 +553,13 @@
     "instance.INSTANCE_95B.name":{
         "en": "Slime Opera House",
         "fr": "L'opéra Slime",
-        "es": "",
+        "es": "Ópera de Limo",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Schleim-Opernhaus",
         "jp": "",
         "pt": "",
         "vi": "Bầy Nhầy Nhà Hát Opera",
@@ -572,13 +572,13 @@
     "instance.INSTANCE_95C.name":{
         "en": "Opera House Bandits",
         "fr": "Bandits de l'Opéra",
-        "es": "",
+        "es": "Bandidos de la Ópera",
         "zh-cn": "",
         "zh-tw":"",
         "kr": "",
         "ru": "",
         "tr": "",
-        "de": "",
+        "de": "Opernhaus-Banditen",
         "jp": "",
         "pt": "",
         "vi": "Đạo Tặc Nhà Hát Opera",
